--- a/public/css/xtian-google-ratings-public.css
+++ b/public/css/xtian-google-ratings-public.css
@@ -4,7 +4,7 @@
  */
     
      :root {
-        --star-size: 30px;
+        --star-size: 25px;
         --star-color: #909090;
         --star-background: #e77119;
     }
@@ -36,10 +36,9 @@
             background-color: #fff;
             z-index: 1000;
             position: fixed;
-            left: 0;
             top: 50%;
-            width: 343px;
-            padding-left: 11px;
+            min-width: 175px;
+            padding: 0 4px;
             margin-top: 150px;
             transform: rotate(270deg);
             transform-origin: 0% 0%;
@@ -105,7 +104,6 @@
             padding: 5px 5px;
             width: auto;
             position: fixed;
-            left: 3px;
             bottom: 0px;
             z-index: 1000;
             font-family: sans-serif;
@@ -140,7 +138,7 @@
             text-align: center;
         }
         img.gr-google-logo {
-            width: 43px;
+            width: 26px;
         }
         .gr-left {
             margin: auto 0;
@@ -148,17 +146,17 @@
         .gr-right {
             margin-left: 9px;
         }
-        span.gr-title {
+        /* span.gr-title {
             font-size: 20px;
             color: #6d6d6d;
             font-family: sans-serif;
-        }
+        } */
         span.gr_rating {
-            font-size: 23px;
+            font-size: 19px;
             color: #e77119;
             font-weight: bold;
         }
-        .gr-right__main {
+        /* .gr-right__main {
             margin-top: -3px;
-        }
+        } */
     }
